--- a/frontEnd/src/app/pages/notas/notas.component.html
+++ b/frontEnd/src/app/pages/notas/notas.component.html
@@ -23,13 +23,7 @@
       <dxi-item itemType="group" [colCount]="3" [colSpan]="3">
         <dxi-item dataField="numeroNota"></dxi-item>
         <dxi-item dataField="dataNota" ></dxi-item>
-        <dxi-item dataField="cliente.nome">
-          <dx-select-box
-            [dataSource]="clientes"
-            valueExpr="nome"
-            [displayExpr]="getClienteNome">
-          </dx-select-box>
-        </dxi-item>
+        <dxi-item dataField="cliente.nome"></dxi-item>
       </dxi-item>
       <dxi-item dataField="itensNota" [colSpan]="3"></dxi-item>
     </dxo-form>
@@ -38,7 +32,13 @@
 
   <dxi-column dataField="numeroNota" caption="Número" [width]="90"></dxi-column>
   <dxi-column dataField="dataNota" dataType="date" caption="Data Nota"></dxi-column>
-  <dxi-column dataField="cliente.nome" caption="Cliente"></dxi-column>
+  <dxi-column dataField="cliente.nome" caption="Cliente">
+    <dxo-lookup
+      [dataSource]="clientes"
+      displayExpr="nome"
+      valueExpr="id">
+    </dxo-lookup>
+  </dxi-column>
   <dxi-column dataField="itensNota.0.valor" caption="Teste"></dxi-column>
   <dxi-column [calculateCellValue] = "getTotalNota" caption="Valor Total"></dxi-column>
   <dxi-column dataField="itensNota" [visible]="false" editCellTemplate="itensNotaEditCellTemplate"></dxi-column>
@@ -52,8 +52,14 @@
         [allowDeleting]="true"
       ></dxo-editing>
       <dxi-column dataField="itensNota" [visible]="false" ></dxi-column>
-      <dxi-column dataField="produto.codigo" [visible]="true" caption ="Codigo" ></dxi-column>
-      <dxi-column dataField="produto.descricao" [visible]="true" caption ="Descrição" ></dxi-column>
+      <dxi-column dataField="produto.codigo" [visible]="false" caption ="Codigo" ></dxi-column>
+      <dxi-column dataField="produto.descricao" [visible]="true" caption ="Descrição" >
+        <dxo-lookup
+          [dataSource]="data.value"
+          displayExpr="produto.descricao"
+          valueExpr="id">
+        </dxo-lookup>
+      </dxi-column>
       <dxi-column dataField="quantidade" [visible]="true" caption ="Quantidade" ></dxi-column>
       <dxi-column dataField="produto.preco" [visible]="true" caption ="Preço" format="R$ #,###,##0.00"></dxi-column>
       <dxi-column dataField="valor" [visible]="true" caption ="Total Produto" format="R$ #,###,##0.00"></dxi-column>
