Correção itens nota e crud produto

--- a/frontEnd/src/app/pages/notas/notas.component.html
+++ b/frontEnd/src/app/pages/notas/notas.component.html
@@ -32,16 +32,18 @@
 
   <dxi-column dataField="numeroNota" caption="Número" [width]="90"></dxi-column>
   <dxi-column dataField="dataNota" dataType="date" caption="Data Nota"></dxi-column>
-  <dxi-column dataField="cliente.nome" caption="Cliente">
-    <dxo-lookup
-      [dataSource]="clientes"
-      displayExpr="nome"
-      valueExpr="id">
-    </dxo-lookup>
+  <dxi-column dataField="cliente" caption="Cliente" cellTemplate="clienteCellTemplate" editCellTemplate="clienteEditCellTemplate">
+    <div *dxTemplate="let data of 'clienteCellTemplate'">{{data.value.nome}}</div>
+    <div *dxTemplate="let data of 'clienteEditCellTemplate'">
+      <dx-select-box
+        [items]= "clientes"
+        displayExpr="nome"
+        valueExpr="id">
+      </dx-select-box>
+    </div>
   </dxi-column>
-  <dxi-column dataField="itensNota.0.valor" caption="Teste"></dxi-column>
+  <dxi-column dataField="itensNota.0.valor" caption="Valor Total da Nota"></dxi-column>
   <dxi-column dataField="itensNota" [visible]="false" editCellTemplate="itensNotaEditCellTemplate"></dxi-column>
-
   <div *dxTemplate="let data of 'itensNotaEditCellTemplate'">
     <dx-data-grid [dataSource]="data.value">
       <dxo-editing
@@ -50,60 +52,18 @@
         [allowAdding]="true"
         [allowDeleting]="true"
       ></dxo-editing>
-      <dxi-column dataField="produto"  caption ="Produto" cellTemplate="produtoCellTemplate" editCellTemplate="produtoCellTemplate"></dxi-column>
-      <div *dxTemplate="let data of 'produtoCellTemplate'">{{data.value}}</div>
-      <div>
+      <dxi-column dataField="produto"  caption ="Produto" cellTemplate="produtoCellTemplate" editCellTemplate="produtoEditCellTemplate"></dxi-column>
+      <div *dxTemplate="let data of 'produtoCellTemplate'">{{data.value.descricao}}</div>
+      <div *dxTemplate="let data of 'produtoEditCellTemplate'">
         <dx-select-box
           [items]="produtosList"
           displayExpr="descricao"
           valueExpr="id">
         </dx-select-box>
       </div>
-
-      <dxi-column dataField="valor" [visible]="true" caption ="Total Produto" format="R$ #,###,##0.00"></dxi-column>
+      <dxi-column dataField="quantidade" caption ="Quantidade" ></dxi-column>
+      <dxi-column dataField="valor" caption ="Total Produto" format="R$ #,###,##0.00"></dxi-column>
     </dx-data-grid>
   </div>
-
-  <!--<div *dxTemplate="let data of 'itensNotaEditCellTemplate'">
-    <dx-data-grid [(dataSource)]="data.value" >
-      <dxo-editing
-        mode="row"
-        [allowUpdating]="true"
-        [allowAdding]="true"
-        [allowDeleting]="true"
-      ></dxo-editing>
-      <dxi-column dataField="itensNota" [visible]="false" ></dxi-column>
-      <dxi-column dataField="produto.codigo" [visible]="false" caption ="Codigo" ></dxi-column>
-      <dxi-column dataField="produto.descricao" [visible]="true" caption ="Descrição" >
-        <dxo-lookup
-          [dataSource]="data.value"
-          displayExpr="produto.descricao"
-          valueExpr="id">
-        </dxo-lookup>
-      </dxi-column>
-      <dxi-column dataField="quantidade" [visible]="true" caption ="Quantidade" ></dxi-column>
-      <dxi-column dataField="produto.preco" [visible]="true" caption ="Preço" format="R$ #,###,##0.00"></dxi-column>
-      <dxi-column dataField="valor" [visible]="true" caption ="Total Produto" format="R$ #,###,##0.00"></dxi-column>
-    </dx-data-grid>
-  </div>-->
-
-  <!--<div *dxTemplate="let data of 'itensNotaEditCellTemplate'">
-    <dx-data-grid [(dataSource)]="data.value" >
-      <dxo-editing
-        mode="row"
-        [allowUpdating]="true"
-        [allowAdding]="true"
-        [allowDeleting]="true"
-      ></dxo-editing>
-
-      <dxi-column dataField="produto" cellTemplate="produtoCellTemplate" ></dxi-column>
-
-      <div *dxTemplate="let data of 'produtoCellTemplate'">
-        {{data.value ? data.value.codigo : "Sem Itens para demonstrar"}}
-      </div>
-
-    </dx-data-grid>
-  </div>-->
-
 
 </dx-data-grid>
