Finalizacao da tela de notas

--- a/frontEnd/src/app/pages/notas/notas.component.html
+++ b/frontEnd/src/app/pages/notas/notas.component.html
@@ -3,6 +3,7 @@
   [dataSource]="notasFiscais"
   keyExpr="id"
   [showBorders]="true"
+  (onInitNewRow)="onInitNewRowNotaGrid($event)"
   (onSaved)="onSaved($event)"
 >
   <dxo-paging [enabled]="false"></dxo-paging>
@@ -19,11 +20,12 @@
       [height]="525"
     >
     </dxo-popup>
+
     <dxo-form [colCount]="3">
       <dxi-item itemType="group" [colCount]="3" [colSpan]="3">
         <dxi-item dataField="numeroNota"></dxi-item>
-        <dxi-item dataField="dataNota" ></dxi-item>
-        <dxi-item dataField="cliente.nome"></dxi-item>
+        <dxi-item dataField="dataNota"></dxi-item>
+        <dxi-item dataField="cliente"></dxi-item>
       </dxi-item>
       <dxi-item dataField="itensNota" [colSpan]="3"></dxi-item>
     </dxo-form>
@@ -32,24 +34,25 @@
 
   <dxi-column dataField="numeroNota" caption="Número" [width]="90"></dxi-column>
   <dxi-column dataField="dataNota" dataType="date" caption="Data Nota"></dxi-column>
-
-  <dxi-column dataField="cliente" caption="Cliente" cellTemplate="clienteCellTemplate" editCellTemplate="clienteEditCellTemplate">
-    <div *dxTemplate="let data of 'clienteCellTemplate'">{{data.value.nome}}</div>
-<!--    <div *dxTemplate="let data of 'clienteEditCellTemplate'">
-      <dx-select-box
-        [items]="clientes"
-        displayExpr="nome"
-        valueExpr="id">
-      </dx-select-box>
-    </div>-->
-  </dxi-column>
+  <dxi-column dataField="cliente" caption="Cliente" cellTemplate="clienteCellTemplate" editCellTemplate="clienteEditCellTemplate"></dxi-column>
 
   <dxi-column dataField="valorTotalNota" caption="Total da Nota"></dxi-column>
   <dxi-column dataField="itensNota" [visible]="false" editCellTemplate="itensNotaEditCellTemplate"></dxi-column>
 
+  <div *dxTemplate="let data of 'clienteCellTemplate'">{{data.value.nome}}</div>
+
+  <div *dxTemplate="let data of 'clienteEditCellTemplate'">
+    <dx-select-box
+      [items]="clientes"
+      [(value)]="data.value.id"
+      valueExpr="id"
+      displayExpr="nome">
+    </dx-select-box>
+  </div>
+
+
   <div *dxTemplate="let data of 'itensNotaEditCellTemplate'">
-    <!--<dx-data-grid [dataSource]="onInitNota(data.value)">-->
-    <dx-data-grid [dataSource]="data.value">
+    <dx-data-grid [dataSource]="data.value" (onSaved)="onSavedItemGrid($event, data)">
       <dxo-editing
         mode="row"
         [allowUpdating]="true"
@@ -57,31 +60,22 @@
         [allowDeleting]="true"
       ></dxo-editing>
 
-      <dxi-column dataField="produto"  caption ="Produto" cellTemplate="produtoCellTemplate" editCellTemplate="produtoEditCellTemplate"></dxi-column>
+      <dxi-column dataField="produto" caption="Produto" cellTemplate="produtoCellTemplate" editCellTemplate="produtoEditCellTemplate"></dxi-column>
+      <dxi-column dataField="quantidade" caption="Quantidade"></dxi-column>
+      <dxi-column dataField="valor" caption="Total Produto" format="R$ #,###,##0.00"></dxi-column>
 
       <div *dxTemplate="let data of 'produtoCellTemplate'">{{data.value.descricao}}</div>
 
       <div *dxTemplate="let data of 'produtoEditCellTemplate'">
-
         <dx-select-box
           [items]="produtosList"
-          displayExpr="descricao"
-          valueExpr="id">
+          [value]="data.value.id"
+          (valueChange)="valueChandeProduto($event, data)"
+          valueExpr="id"
+          displayExpr="descricao">
         </dx-select-box>
 
       </div>
-
-      <div *dxTemplate="let data of 'clienteEditCellTemplate'">
-        <dx-select-box
-          [items]="clientes"
-          displayExpr="nome"
-          valueExpr="id">
-        </dx-select-box>
-      </div>
-
-      <dxi-column dataField="quantidade" caption ="Quantidade" ></dxi-column>
-
-      <dxi-column dataField="valor" caption ="Total Produto" format="R$ #,###,##0.00"></dxi-column>
 
     </dx-data-grid>
   </div>
